// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AffixedProgressBar /> should render 1`] = `
<_AffixedProgressBar
  className="ProgressBar__AffixedProgressBar-pwv6ii-2 kyYeyG"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> should render when [bottom=true] 1`] = `
<_AffixedProgressBar
  bottom={true}
  className="ProgressBar__AffixedProgressBar-pwv6ii-2 kyYeyG"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> should render when [color="blue"] 1`] = `
<_AffixedProgressBar
  className="ProgressBar__AffixedProgressBar-pwv6ii-2 kyYeyG"
  color="blue"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> should render when [color="green"] 1`] = `
<_AffixedProgressBar
  className="ProgressBar__AffixedProgressBar-pwv6ii-2 kyYeyG"
  color="green"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> should render when [color="orange"] 1`] = `
<_AffixedProgressBar
  className="ProgressBar__AffixedProgressBar-pwv6ii-2 kyYeyG"
  color="orange"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> should render when [color="red"] 1`] = `
<_AffixedProgressBar
  className="ProgressBar__AffixedProgressBar-pwv6ii-2 kyYeyG"
  color="red"
  now={68}
/>
`;

exports[`<ProgressBar /> should render 1`] = `
<ProgressBar__StyledProgress
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> should render when [color="blue"] 1`] = `
<ProgressBar__StyledProgress
  color="blue"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> should render when [color="green"] 1`] = `
<ProgressBar__StyledProgress
  color="green"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> should render when [color="orange"] 1`] = `
<ProgressBar__StyledProgress
  color="orange"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> should render when [color="red"] 1`] = `
<ProgressBar__StyledProgress
  color="red"
  max="100"
  value={32}
/>
`;
